# Reactant

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cfg.ini  docker-compose.yml  main  main.c  makefile  start.sh
include/: exsrc_aes.h  exsrc_minIni.h  reactant_network.h  reactant_peripherals.h  reactant_server.h  reactant_ui.h  reactant_util.h  tests.h
lib/: tcp.c  tcp.h  ui.c  ui.h
source/: exsrc_aes.c  exsrc_ini.c  exsrc_minIni.c  main.c  reactant_network.c  reactant_peripherals.c  reactant_server.c  reactant_ui.c  reactant_util.c  tests.c  ui.c
